Resolve issue with banner image not showing on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -503,7 +503,6 @@ a:focus {
   font-size: 60px;
   line-height: 1.2;
   letter-spacing: -1.2px;
-  /* text-transform: capitalize; */
   color: #2f508c;
 }
 
@@ -532,7 +531,6 @@ a:focus {
   }
   .banner {
     min-height: 450px;
-    background: #fff !important;
   }
 }
 
@@ -543,23 +541,13 @@ a:focus {
   }
   .banner {
     min-height: 450px;
-    background: #fff !important;
   }
 }
 
 @media (max-width: 768px) {
   .banner .block h1 {
     font-size: 56px;
-    line-height: 70px;
-  }
-  .banner {
-    background: #fff !important;
-  }
-}
-
-@media (max-width: 992px) {
-  .banner {
-    background: #fff !important;
+    line-height: -2px !important;
   }
 }
 
